[project]
name = "sqlalchemy_demo"
version = "0.0.0"
description = "Some sqlalchemy demo"
authors = [
    {name = "Dimples_YJ", email = "2890841438@qq.com"},
]
dependencies = [
    "SQLAlchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
